[package]
name = "leptos-tiptap"
version = "0.10.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptos-tiptap"
description = """
Tiptap integration for leptos projects.
"""
categories = ["gui"]
keywords = ["tiptap", "leptos", "components", "editor", "wysiwyg"]
exclude = [".claude", ".idea", ".vscode", "AGENTS.md", "CLAUDE.md", "Justfile", "TODO", "tiptap/**"]

[features]
default = ["component", "document", "paragraph", "text"]
component = []
starter-kit = [
    "blockquote",
    "bold",
    "bullet_list",
    "code",
    "code_block",
    "document",
    "dropcursor",
    "gapcursor",
    "hard_break",
    "heading",
    "history",
    "horizontal_rule",
    "italic",
    "list_item",
    "ordered_list",
    "paragraph",
    "strike",
    "text",
]
full = [
    "starter-kit",
    "text_align",
    "highlight",
    "image",
    "link",
    "placeholder",
    "youtube",
]
ssr = ["leptos-element-capture/ssr"]
blockquote = []
bold = []
bullet_list = ["list_item"]
code = []
code_block = []
document = []
dropcursor = []
gapcursor = []
hard_break = []
heading = []
history = []
horizontal_rule = []
italic = []
list_item = []
ordered_list = ["list_item"]
paragraph = []
strike = []
text = []
text_align = ["heading", "paragraph"]
highlight = []
image = []
link = []
placeholder = []
youtube = []

[dependencies]
cfg-if = "1.0.0"
leptos = "0.8.2"
leptos-element-capture = "0.1.0"
rootcause = "0.12.1"
send_wrapper = "0.6.0"
serde = { version = "1.0.189", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.145"
thiserror = "2.0.18"
tracing = "0.1.39"
wasm-bindgen = "0.2.118"

[dev-dependencies]
assertr = "0.5.2"
rootcause-backtrace = "0.12.1"
rootcause-tracing = "0.12.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
browser-test = "0.1.0"
leptos-browser-test = { path = "../leptos-browser-test" }
tokio = { version = "1.50.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "fmt", "registry"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
