[package]
name = "leptos-tiptap-build"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptos-tiptap"
description = """
Build dependencies for leptos-tiptap.
"""
categories = ["gui"]
keywords = ["tiptap", "leptos", "components", "editor", "wysiwyg"]

[dependencies]
phf = "0.11"
