[package]
name = "leptos-tiptap"
version = "0.9.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptos-tiptap"
description = """
Tiptap integration for leptos projects.
"""
categories = ["gui"]
keywords = ["tiptap", "leptos", "components", "editor", "wysiwyg"]

[dependencies]
cfg-if = "1.0.0"
leptos = "0.8.2"
send_wrapper = "0.6.0"
serde = { version = "1.0.189", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
tracing = "0.1.39"
wasm-bindgen = "0.2.100"

[features]
ssr = []
