[package]
name = "book"
version = "0.1.0"
edition = "2021"
build = false

[[bin]]
name = "force-build"
path = "build.rs"
required-features = ["build_deps"] # only needed for build-dependencies

[profile.release]
opt-level = "z"
lto = "thin"
debug = 0

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
indoc = "2.0.1"
leptos-tiptap = { path = "../../../leptos-tiptap" }
leptos-tiptap-build = { path = "../../../leptos-tiptap-build", optional = true }
leptos = { version = "0.3", default-features = false, features = [
    "csr",
    "tracing",
    "stable",
] }
serde = "1"
serde-wasm-bindgen = "0.5"
serde_json = "1"
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["js", "v4", "v7", "serde"] }
wasm-bindgen = "0.2"

[features]
build_deps = ["leptos-tiptap-build"]
