[package]
name = "book"
version = "0.2.0"
edition = "2021"
build = false

[[bin]]
name = "force-build"
path = "build.rs"
required-features = ["build_deps"] # only needed for build-dependencies

[profile.release]
opt-level = "z"
lto = "thin"
debug = 0

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.4", features = ["csr"] }
leptos-tiptap = { path = "../../../leptos-tiptap" }
leptos-tiptap-build = { path = "../../../leptos-tiptap-build", optional = true }

[features]
build_deps = ["leptos-tiptap-build"]
