[package]
name = "demo-csr"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = "thin"
debug = 0

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.5.1", features = ["csr"] }
leptos-tiptap = { path = "../../../leptos-tiptap" }

[build-dependencies]
leptos-tiptap-build = { path = "../../../leptos-tiptap-build" }
