[package]
name = "demo-csr"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = "z"
lto = "thin"
debug = 0

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.2", features = ["csr"] }
leptos-tiptap = { path = "../../../leptos-tiptap" }

[build-dependencies]
leptos-tiptap-build = { path = "../../../leptos-tiptap-build" }
